@@ -1,3 +1,7 @@
+- Add SMTP response generation parameter into init handler.
+
+- Move message size checking from protocol-smtp to plugin-counters
+
 - Fix SASL "Authentication failed" message to include EMSS code
 
 - Write install document.
