@@ -67,29 +67,29 @@ const response* handle_reset(void)
   return resp;
 }
 
-const response* handle_sender(str* sender)
+const response* handle_sender(str* sender, str* params)
 {
   const response* resp = 0;
   const response* tmpresp = 0;
-  MODULE_CALL(sender, (sender), 1);
+  MODULE_CALL(sender, (sender, params), 1);
   if (resp == 0)
     return &resp_no_sender;
   if (session.backend->sender != 0)
-    if (!response_ok(tmpresp = session.backend->sender(sender)))
+    if (!response_ok(tmpresp = session.backend->sender(sender, params)))
       return tmpresp;
   if (resp == 0 || resp->message == 0) resp = tmpresp;
   return resp;
 }
 
-const response* handle_recipient(str* recip)
+const response* handle_recipient(str* recip, str* params)
 {
   const response* resp = 0;
   const response* hresp = 0;
-  MODULE_CALL(recipient, (recip), 1);
+  MODULE_CALL(recipient, (recip, params), 1);
   if (resp == 0)
     return &resp_no_rcpt;
   if (session.backend->recipient != 0)
-    if (!response_ok(hresp = session.backend->recipient(recip)))
+    if (!response_ok(hresp = session.backend->recipient(recip, params)))
       return hresp;
   if (resp == 0 || resp->message == 0) resp = hresp;
   return resp;
