@@ -14,8 +14,8 @@ struct plugin
   const response* (*init)(void);
   const response* (*helo)(str*);
   const response* (*reset)(void);
-  const response* (*sender)(str*);
-  const response* (*recipient)(str*);
+  const response* (*sender)(str*, str*);
+  const response* (*recipient)(str*, str*);
   const response* (*data_start)(void);
   const response* (*data_block)(const char* bytes, unsigned long len);
   const response* (*data_end)(void);
@@ -52,8 +52,8 @@ extern const char UNKNOWN[];
 extern const response* handle_helo(str* host);
 extern const response* handle_init(void);
 extern const response* handle_reset(void);
-extern const response* handle_sender(str* sender);
-extern const response* handle_recipient(str* recip);
+extern const response* handle_sender(str* sender, str* params);
+extern const response* handle_recipient(str* recip, str* params);
 extern const response* handle_data_start(void);
 extern void handle_data_bytes(const char* bytes, unsigned len);
 extern const response* handle_data_end(void);
