@@ -388,7 +388,7 @@ static void copy_addr(const str* addr,
 static str saved_sender;
 static str sender_domain;
 
-static const response* validate_sender(str* sender)
+static const response* validate_sender(str* sender, str* params)
 {
   struct rule* rule;
   const response* r;
@@ -402,12 +402,13 @@ static const response* validate_sender(str* sender)
 	return r;
     }
   return 0;
+  (void)params;
 }
 
 static str laddr;
 static str rdomain;
 
-static const response* validate_recipient(str* recipient)
+static const response* validate_recipient(str* recipient, str* params)
 {
   struct rule* rule;
   const response* r;
@@ -423,6 +424,7 @@ static const response* validate_recipient(str* recipient)
 	return r;
     }
   return 0;
+  (void)params;
 }
 
 struct plugin plugin = {
