@@ -3,7 +3,7 @@
 
 static response resp;
 
-static const response* sender(str* s)
+static const response* sender(str* s, str* p)
 {
   const char* sr;
   if ((sr = getenv("SMTPREJECT")) != 0
@@ -21,6 +21,7 @@ static const response* sender(str* s)
   }
   return 0;
   (void)s;
+  (void)p;
 }
 
 struct plugin plugin = {
