@@ -3,7 +3,7 @@
 
 static RESPONSE(ok, 250, 0);
 
-static const response* do_recipient(str* recipient)
+static const response* do_recipient(str* recipient, str* params)
 {
   const char* relayclient = session_getenv("RELAYCLIENT");
   if (relayclient != 0) {
@@ -13,6 +13,7 @@ static const response* do_recipient(str* recipient)
   else if (session_getnum("authenticated", 0))
     return &resp_ok;
   return 0;
+  (void)params;
 }
 
 struct plugin plugin = {
