@@ -15,6 +15,7 @@ static const response* resp;
 static char buf[8192];
 static str line;
 static str tmp;
+static str dummy;
 
 static void die(const char* msg)
 {
@@ -57,8 +58,10 @@ static void get_sender(ibuf* in)
   case 0: die("Invalid sender netstring");
   }
   msg3("sender <", line.s, ">");
-  if (response_ok(resp))
-    resp = handle_sender(&line);
+  if (response_ok(resp)) {
+    dummy.len = 0;
+    resp = handle_sender(&line, &dummy);
+  }
 }
 
 static void get_recips(ibuf* in)
@@ -82,8 +85,10 @@ static void get_recips(ibuf* in)
     if (line.s[j+len] != ',') die("Netstring missing comma");
     str_copyb(&tmp, line.s+j, len);
     msg3("recipient <", tmp.s, ">");
-    if (response_ok(resp))
-      resp = handle_recipient(&tmp);
+    if (response_ok(resp)) {
+      dummy.len = 0;
+      resp = handle_recipient(&tmp, &dummy);
+    }
     i = j + len;
   }
 }
