@@ -170,7 +170,7 @@ static int MAIL(void)
   msg2("MAIL ", arg.s);
   do_reset();
   parse_addr_arg();
-  if ((resp = handle_sender(&addr)) == 0)
+  if ((resp = handle_sender(&addr, &params)) == 0)
     resp = &resp_mail_ok;
   if (number_ok(resp)) {
     /* Look up the size limit after handling the sender,
@@ -192,7 +192,7 @@ static int RCPT(void)
   msg2("RCPT ", arg.s);
   if (!saw_mail) return respond(&resp_no_mail);
   parse_addr_arg();
-  if ((resp = handle_recipient(&addr)) == 0)
+  if ((resp = handle_recipient(&addr, &params)) == 0)
     resp = &resp_rcpt_ok;
   if (number_ok(resp)) saw_rcpt = 1;
   return respond(resp);
