@@ -7,6 +7,8 @@ Changes in version 1.01
 - Added a list of built-in plugins.  The list currently contains the
   three accept* plugins, which are extremely trivial.
 
+- Some internal plugin API changes.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
